--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = QAT_engine
-url = https://github.com/intel/QAT_Engine/archive/v0.6.7/QAT_Engine-0.6.7.tar.gz
+url = https://github.com/intel/QAT_Engine/archive/v0.6.8/QAT_Engine-0.6.8.tar.gz
 archives = 
 giturl = https://github.com/intel/QAT_Engine.git
 domain = 
@@ -14,7 +14,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
