--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = QAT_engine
-url = https://github.com/intel/QAT_Engine/archive/v0.6.8/QAT_Engine-0.6.8.tar.gz
+url = https://github.com/intel/QAT_Engine/archive/v0.6.9/QAT_Engine-0.6.9.tar.gz
 archives = 
 giturl = https://github.com/intel/QAT_Engine.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
