--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = QAT_engine
-url = https://github.com/intel/QAT_Engine/archive/v0.6.16/QAT_Engine-0.6.16.tar.gz
+url = https://github.com/intel/QAT_Engine/archive/v0.6.17/QAT_Engine-0.6.17.tar.gz
 archives = 
 giturl = https://github.com/intel/QAT_Engine.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
