--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = QAT_engine
-url = https://github.com/intel/QAT_Engine/archive/v0.6.18/QAT_Engine-0.6.18.tar.gz
+url = https://github.com/intel/QAT_Engine/archive/v0.6.19/QAT_Engine-0.6.19.tar.gz
 archives = 
 giturl = https://github.com/intel/QAT_Engine.git
 domain = 
@@ -27,6 +27,8 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# compile full (traditional) debug info
+full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
