QAT_engine: Autospec creation for update from version 1.6.0 to version 1.6.1
Venkatesh J (2):
      Refactor QAT_HW & QAT_SW RSA code with bug fixes.
      Version bump to 1.6.1 with README updates.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = QAT_engine
-url = https://github.com/intel/QAT_Engine/archive/v1.6.0/QAT_Engine-1.6.0.tar.gz
+url = https://github.com/intel/QAT_Engine/archive/v1.6.1/QAT_Engine-1.6.1.tar.gz
 archives = 
 giturl = https://github.com/intel/QAT_Engine.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
